--- a/Question/Question/Base.lproj/Main.storyboard
+++ b/Question/Question/Base.lproj/Main.storyboard
@@ -14,13 +14,13 @@
         <!--Q&A-->
         <scene sceneID="9wk-Gb-Wru">
             <objects>
-                <tableViewController title="Q&amp;A" id="Okh-Gv-9kn" sceneMemberID="viewController">
+                <tableViewController title="Q&amp;A" id="Okh-Gv-9kn" customClass="QuestionTableViewController" customModule="Question" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Ybm-8k-oyV">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Question Cell" id="fu9-mA-yhp">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Question Cell" id="fu9-mA-yhp" customClass="QuestionTableViewCell" customModule="Question" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="fu9-mA-yhp" id="zAf-Y6-um5">
@@ -52,47 +52,56 @@
         <!--Your Answer-->
         <scene sceneID="k0w-XZ-kle">
             <objects>
-                <viewController id="jyH-eX-hBk" sceneMemberID="viewController">
+                <viewController id="jyH-eX-hBk" customClass="AnswerViewController" customModule="Question" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="nrV-8e-msu">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="center" axis="vertical" alignment="top" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="au9-Sw-EnH">
-                                <rect key="frame" x="6" y="84" width="363" height="123"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="YE3-gu-tP6">
+                                <rect key="frame" x="16" y="86" width="343" height="125"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="249" verticalCompressionResistancePriority="749" text="Question: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jcN-dD-tzS">
-                                        <rect key="frame" x="0.0" y="0.0" width="78" height="18.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Asked by:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ILo-He-KfY">
-                                        <rect key="frame" x="0.0" y="26.5" width="75" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5iu-5t-tAh">
-                                        <rect key="frame" x="0.0" y="55" width="25" height="30"/>
-                                        <nil key="textColor"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                    <textField opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KYO-l2-4vc">
-                                        <rect key="frame" x="0.0" y="93" width="25" height="30"/>
-                                        <nil key="textColor"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="E6z-ch-RnZ">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="49"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="249" verticalCompressionResistancePriority="749" text="Question: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jcN-dD-tzS">
+                                                <rect key="frame" x="0.0" y="0.0" width="343" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Asked by:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ILo-He-KfY">
+                                                <rect key="frame" x="0.0" y="28.5" width="343" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Umm-Ri-LoP">
+                                        <rect key="frame" x="0.0" y="57" width="343" height="68"/>
+                                        <subviews>
+                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="246" verticalHuggingPriority="248" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KYO-l2-4vc">
+                                                <rect key="frame" x="0.0" y="0.0" width="343" height="30"/>
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <textField opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5iu-5t-tAh">
+                                                <rect key="frame" x="0.0" y="38" width="343" height="30"/>
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                        </subviews>
+                                    </stackView>
                                 </subviews>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Eox-Eh-v3r" firstAttribute="bottom" secondItem="au9-Sw-EnH" secondAttribute="bottom" constant="460" id="1Zg-xP-yIt"/>
-                            <constraint firstItem="au9-Sw-EnH" firstAttribute="top" secondItem="Eox-Eh-v3r" secondAttribute="top" constant="20" id="9FI-P2-hgA"/>
-                            <constraint firstItem="Eox-Eh-v3r" firstAttribute="trailing" secondItem="au9-Sw-EnH" secondAttribute="trailing" constant="6" id="Z3h-3F-K2f"/>
-                            <constraint firstItem="au9-Sw-EnH" firstAttribute="leading" secondItem="Eox-Eh-v3r" secondAttribute="leading" constant="6" id="sKQ-tf-H3B"/>
+                            <constraint firstItem="Eox-Eh-v3r" firstAttribute="trailing" secondItem="YE3-gu-tP6" secondAttribute="trailing" constant="16" id="Kld-1Y-585"/>
+                            <constraint firstItem="YE3-gu-tP6" firstAttribute="leading" secondItem="Eox-Eh-v3r" secondAttribute="leading" constant="16" id="f74-ug-wcd"/>
+                            <constraint firstItem="YE3-gu-tP6" firstAttribute="top" secondItem="Eox-Eh-v3r" secondAttribute="top" constant="22" id="iVd-vP-oZd"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Eox-Eh-v3r"/>
                     </view>
@@ -107,27 +116,33 @@
         <!--Your Question-->
         <scene sceneID="2Gb-Yd-See">
             <objects>
-                <viewController id="g5A-wH-wkZ" sceneMemberID="viewController">
+                <viewController id="g5A-wH-wkZ" customClass="AskQuestionViewController" customModule="Question" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="1sO-1Z-lbF">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Question: " textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mVh-0f-pXW">
-                                <rect key="frame" x="16" y="85" width="343" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Question: " textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mVh-0f-pXW">
+                                <rect key="frame" x="16" y="80" width="343" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name: " textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2JY-vV-n70">
-                                <rect key="frame" x="16" y="123" width="343" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name: " textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2JY-vV-n70">
+                                <rect key="frame" x="16" y="118" width="343" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="mVh-0f-pXW" firstAttribute="top" secondItem="Pmg-vk-bBU" secondAttribute="top" constant="16" id="EIq-8F-jTX"/>
+                            <constraint firstItem="2JY-vV-n70" firstAttribute="top" secondItem="mVh-0f-pXW" secondAttribute="bottom" constant="8" id="LlF-ia-6a3"/>
+                            <constraint firstItem="mVh-0f-pXW" firstAttribute="leading" secondItem="Pmg-vk-bBU" secondAttribute="leading" constant="16" id="Lof-yN-otN"/>
+                            <constraint firstItem="Pmg-vk-bBU" firstAttribute="trailing" secondItem="mVh-0f-pXW" secondAttribute="trailing" constant="16" id="erS-5K-7qq"/>
+                            <constraint firstItem="Pmg-vk-bBU" firstAttribute="trailing" secondItem="2JY-vV-n70" secondAttribute="trailing" constant="16" id="l74-Rz-a60"/>
+                            <constraint firstItem="2JY-vV-n70" firstAttribute="leading" secondItem="Pmg-vk-bBU" secondAttribute="leading" constant="16" id="vId-7M-LpR"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Pmg-vk-bBU"/>
                     </view>
                     <navigationItem key="navigationItem" title="Your Question" largeTitleDisplayMode="always" id="NRg-Ga-JsC">
